NE-280: release scale testing