@@ -154,7 +154,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
     // open print writers
     openWriters();
 
-    handler = this.getSearchHandler(ConfigUtility.DEFAULT);
+    handler = getSearchHandler(ConfigUtility.DEFAULT);
 
     prepareMaps();
 
@@ -243,11 +243,11 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
     }
 
     // make terminologies map
-    for (final Terminology term : this.getCurrentTerminologies().getObjects()) {
+    for (final Terminology term : getCurrentTerminologies().getObjects()) {
       termMap.put(term.getTerminology(), term);
     }
 
-    for (final Terminology term : this.getTerminologyLatestVersions()
+    for (final Terminology term : getTerminologyLatestVersions()
         .getObjects()) {
       Atom srcRhtAtom = null;
       SearchResultList searchResults = findConceptSearchResults(
@@ -271,7 +271,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           terminologyToSrcAtomIdMap.put(term.getTerminology(), srcAtomId);
         }
       } else {
-        this.logWarn("missing root SRC concept " + term.getTerminology());
+        logWarn("missing root SRC concept " + term.getTerminology());
       }
     }
 
@@ -295,8 +295,11 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
       final Atom atom = handler.sortAtoms(concept.getAtoms(), list).get(0);
       // Save AUI->CUI map for the project terminology
       if (concept.getTerminology().equals(getProject().getTerminology())) {
-        auiCuiMap.put(atom.getAlternateTerminologyIds()
-            .get(getProject().getTerminology()), concept.getTerminologyId());
+        // Put all AUIs in the map
+        for (final Atom atom2 : concept.getAtoms()) {
+          auiCuiMap.put(atom2.getAlternateTerminologyIds()
+              .get(getProject().getTerminology()), concept.getTerminologyId());
+        }
       }
       // otherwise save fact that atom is preferred id of its concept.
       else {
@@ -560,7 +563,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
 
       // Collect the mapset concepts and cache
       if (a.getTermType().equals("XM")) {
-        MapSet mapSet = this.getMapSet(a.getCodeId(), a.getTerminology(),
+        MapSet mapSet = getMapSet(a.getCodeId(), a.getTerminology(),
             a.getVersion(), Branch.ROOT);
 
         for (final String line : writeMrmap(mapSet, c.getTerminologyId())) {
@@ -1073,28 +1076,28 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
     // C0000005|A4345877|AUI|RB|C0036775|A3586555|AUI||R17427607||MSH|MSH|||N||
     for (final Atom a : c.getAtoms()) {
 
-      for (final AtomRelationship r : a.getRelationships()) {
-        StringBuilder sb = new StringBuilder();
+      for (final AtomRelationship r : a.getInverseRelationships()) {
+        final StringBuilder sb = new StringBuilder();
         sb.append(c.getTerminologyId()).append("|");
         sb.append(
             a.getAlternateTerminologyIds().get(getProject().getTerminology()))
             .append("|");
         sb.append("AUI").append("|");
         sb.append(r.getRelationshipType()).append("|");
-        String aui2 = r.getTo().getAlternateTerminologyIds()
+        final String aui2 = r.getTo().getAlternateTerminologyIds()
             .get(getProject().getTerminology());
         sb.append(auiCuiMap.get(aui2)).append("|");
         sb.append(aui2).append("|");
         sb.append("AUI").append("|");
         sb.append(r.getAdditionalRelationshipType()).append("|");
-        String rui =
+        final String rui =
             r.getAlternateTerminologyIds().get(getProject().getTerminology());
         sb.append(rui != null ? rui : "").append("|");
         sb.append(r.getTerminologyId()).append("|");
         sb.append(r.getTerminology()).append("|");
         sb.append(r.getTerminology()).append("|");
         sb.append(r.getGroup()).append("|");
-        boolean asserts =
+        final boolean asserts =
             termMap.get(r.getTerminology()).isAssertsRelDirection();
         sb.append(asserts ? (r.isAssertedDirection() ? "Y" : "N") : "")
             .append("|");
@@ -1116,7 +1119,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
       // C0000097|A3134287|SCUI|PAR|C0576798|A3476803|SCUI|inverse_isa|R96279727|107042028|SNOMEDCT_US|SNOMEDCT_US|0|N|N||
       if (atomConceptMap.containsKey(a.getId())) {
         final Concept scui = getConcept(atomConceptMap.get(a.getId()));
-        for (final ConceptRelationship rel : scui.getRelationships()) {
+        for (final ConceptRelationship rel : scui.getInverseRelationships()) {
           final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|");
           sb.append(
@@ -1124,19 +1127,19 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
               .append("|");
           sb.append("SCUI").append("|");
           sb.append(rel.getRelationshipType()).append("|");
-          String aui2 = conceptAuiMap.get(scui.getId());
+          final String aui2 = conceptAuiMap.get(scui.getId());
           sb.append(auiCuiMap.get(aui2)).append("|");
           sb.append(aui2).append("|");
           sb.append("SCUI").append("|");
           sb.append(rel.getAdditionalRelationshipType()).append("|");
-          String rui = rel.getAlternateTerminologyIds()
+          final String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");
           sb.append(rel.getTerminologyId()).append("|");
           sb.append(rel.getTerminology()).append("|");
           sb.append(rel.getTerminology()).append("|");
           sb.append(rel.getGroup()).append("|");
-          boolean asserts =
+          final boolean asserts =
               termMap.get(rel.getTerminology()).isAssertsRelDirection();
           sb.append(asserts ? (rel.isAssertedDirection() ? "Y" : "N") : "")
               .append("|");
@@ -1160,7 +1163,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           final ComponentInfoRelationship rel =
               (ComponentInfoRelationship) relationship;
 
-          StringBuilder sb = new StringBuilder();
+          final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|"); // 0 CUI1
           sb.append(
               a.getAlternateTerminologyIds().get(getProject().getTerminology()))
@@ -1182,14 +1185,14 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           sb.append(rel.getTo().getType()).append("|"); // 6 STYPE2
           sb.append(relToInverseMap.get(rel.getAdditionalRelationshipType()))
               .append("|"); // 7 RELA
-          String rui = rel.getAlternateTerminologyIds()
+          final String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");// 8 RUI
           sb.append(rel.getTerminologyId()).append("|"); // 9 SRUI
           sb.append(rel.getTerminology()).append("|"); // 10 SAB
           sb.append(rel.getTerminology()).append("|"); // 11 SL
           sb.append(rel.getGroup()).append("|"); // 12 RG
-          boolean asserts =
+          final boolean asserts =
               termMap.get(rel.getTerminology()).isAssertsRelDirection();
           sb.append(asserts ? (rel.isAssertedDirection() ? "Y" : "N") : "")
               .append("|"); // 13 DIR
@@ -1208,7 +1211,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
 
       if (atomCodeMap.containsKey(a.getId())) {
         final Code code = getCode(atomCodeMap.get(a.getId()));
-        for (final CodeRelationship rel : code.getRelationships()) {
+        for (final CodeRelationship rel : code.getInverseRelationships()) {
 
           // � STYPE1=SCUI, STYPE2=SCUI
           // � AUI1 =
@@ -1216,19 +1219,19 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           // � CUI1 = concept.getTerminologyId
           // � AUI2 = conceptAuiMap.get(scui.getId())
           // � CUI2 = auiCuiMap.get(AUI2);
-          StringBuilder sb = new StringBuilder();
+         final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|"); // 0 CUI1
           sb.append(
               a.getAlternateTerminologyIds().get(getProject().getTerminology()))
               .append("|"); // 1 AUI1
           sb.append("CODE").append("|"); // 2 STYPE1
           sb.append(rel.getRelationshipType()).append("|"); // 3 REL
-          String aui2 = codeAuiMap.get(code.getId());
+          final String aui2 = codeAuiMap.get(code.getId());
           sb.append(auiCuiMap.get(aui2)).append("|"); // 4 CUI2
           sb.append(aui2).append("|"); // 5 AUI2
           sb.append("CODE").append("|"); // 6 STYPE2
           sb.append(rel.getAdditionalRelationshipType()).append("|"); // 7 RELA
-          String rui = rel.getAlternateTerminologyIds()
+          final String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");// 8 RUI
           sb.append(rel.getTerminologyId()).append("|"); // 9 SRUI
@@ -1260,7 +1263,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           final ComponentInfoRelationship rel =
               (ComponentInfoRelationship) relationship;
 
-          StringBuilder sb = new StringBuilder();
+          final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|"); // 0 CUI1
           sb.append(
               a.getAlternateTerminologyIds().get(getProject().getTerminology()))
@@ -1269,7 +1272,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           sb.append(relToInverseMap.get(rel.getRelationshipType())).append("|"); // 3
                                                                                  // REL
           // determine aui2
-          String aui2 = "";
+            String aui2 = "";
           if (rel.getTo().getType().equals("CONCEPT")) {
             aui2 = conceptAuiMap.get(code.getId());
           } else if (rel.getTo().getType().equals("CODE")) {
@@ -1282,14 +1285,14 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           sb.append(rel.getTo().getType()).append("|"); // 6 STYPE2
           sb.append(relToInverseMap.get(rel.getAdditionalRelationshipType()))
               .append("|"); // 7 RELA
-          String rui = rel.getAlternateTerminologyIds()
+          final String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");// 8 RUI
           sb.append(rel.getTerminologyId()).append("|"); // 9 SRUI
           sb.append(rel.getTerminology()).append("|"); // 10 SAB
           sb.append(rel.getTerminology()).append("|"); // 11 SL
           sb.append(rel.getGroup()).append("|"); // 12 RG
-          boolean asserts =
+          final  boolean asserts =
               termMap.get(rel.getTerminology()).isAssertsRelDirection();
           sb.append(asserts ? (rel.isAssertedDirection() ? "Y" : "N") : "")
               .append("|"); // 13 DIR
@@ -1309,7 +1312,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
       if (atomDescriptorMap.containsKey(a.getId())) {
         final Descriptor descriptor =
             getDescriptor(atomDescriptorMap.get(a.getId()));
-        for (final DescriptorRelationship rel : descriptor.getRelationships()) {
+        for (final DescriptorRelationship rel : descriptor.getInverseRelationships()) {
 
           // � STYPE1=SCUI, STYPE2=SCUI
           // � AUI1 =
@@ -1317,26 +1320,26 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           // � CUI1 = concept.getTerminologyId
           // � AUI2 = conceptAuiMap.get(scui.getId())
           // � CUI2 = auiCuiMap.get(AUI2);
-          StringBuilder sb = new StringBuilder();
+          final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|"); // 0 CUI1
           sb.append(
               a.getAlternateTerminologyIds().get(getProject().getTerminology()))
               .append("|"); // 1 AUI1
           sb.append("CODE").append("|"); // 2 STYPE1
           sb.append(rel.getRelationshipType()).append("|"); // 3 REL
-          String aui2 = descriptorAuiMap.get(descriptor.getId());
+          final String aui2 = descriptorAuiMap.get(descriptor.getId());
           sb.append(auiCuiMap.get(aui2)).append("|"); // 4 CUI2
           sb.append(aui2).append("|"); // 5 AUI2
           sb.append("CODE").append("|"); // 6 STYPE2
           sb.append(rel.getAdditionalRelationshipType()).append("|"); // 7 RELA
-          String rui = rel.getAlternateTerminologyIds()
+          final  String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");// 8 RUI
           sb.append(rel.getTerminologyId()).append("|"); // 9 SRUI
           sb.append(rel.getTerminology()).append("|"); // 10 SAB
           sb.append(rel.getTerminology()).append("|"); // 11 SL
           sb.append(rel.getGroup()).append("|"); // 12 RG
-          boolean asserts =
+          final  boolean asserts =
               termMap.get(rel.getTerminology()).isAssertsRelDirection();
           sb.append(asserts ? (rel.isAssertedDirection() ? "Y" : "N") : "")
               .append("|"); // 13
@@ -1362,7 +1365,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           final ComponentInfoRelationship rel =
               (ComponentInfoRelationship) relationship;
 
-          StringBuilder sb = new StringBuilder();
+          final StringBuilder sb = new StringBuilder();
           sb.append(c.getTerminologyId()).append("|"); // 0 CUI1
           sb.append(
               a.getAlternateTerminologyIds().get(getProject().getTerminology()))
@@ -1384,14 +1387,14 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           sb.append(rel.getTo().getType()).append("|"); // 6 STYPE2
           sb.append(relToInverseMap.get(rel.getAdditionalRelationshipType()))
               .append("|"); // 7 RELA
-          String rui = rel.getAlternateTerminologyIds()
+          final  String rui = rel.getAlternateTerminologyIds()
               .get(getProject().getTerminology());
           sb.append(rui != null ? rui : "").append("|");// 8 RUI
           sb.append(rel.getTerminologyId()).append("|"); // 9 SRUI
           sb.append(rel.getTerminology()).append("|"); // 10 SAB
           sb.append(rel.getTerminology()).append("|"); // 11 SL
           sb.append(rel.getGroup()).append("|"); // 12 RG
-          boolean asserts =
+          final  boolean asserts =
               termMap.get(rel.getTerminology()).isAssertsRelDirection();
           sb.append(asserts ? (rel.isAssertedDirection() ? "Y" : "N") : "")
               .append("|"); // 13 DIR
@@ -1409,9 +1412,11 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
       }
     } // end for(Atom... concept.getAtoms())
 
+
+    
     // TODO: deal with PAR/CHD relationships to/from SRC atoms and top-level
     // things
-    // in hierarchies (these don�t get assigned RUIs, and currently there�s an
+    // in hierarchies (these don't get assigned RUIs, and currently there�s an
     // issue of STYPE changing, etc)
 
     Collections.sort(lines);
@@ -1459,7 +1464,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
         String root = null;
         for (final String atomId : FieldedStringTokenizer
             .split(treepos.getAncestorPath(), "~")) {
-          final Atom atom2 = getAtom(new Long(atomId));
+          final Atom atom2 = getAtom(Long.valueOf(atomId));
           if (atom2 == null) {
             throw new Exception("atom from ptr is null");
           }
@@ -1511,14 +1516,14 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           String root = null;
           for (final String conceptId : FieldedStringTokenizer
               .split(treepos.getAncestorPath(), "~")) {
-            final Concept concept2 = getConcept(new Long(conceptId));
+            final Concept concept2 = getConcept(Long.valueOf(conceptId));
             if (concept2 == null) {
               throw new Exception("concept from ptr is null " + conceptId);
             }
             if (paui != null) {
               ptr.append(".");
             }
-            paui = this.conceptAuiMap.get(conceptId);
+            paui = conceptAuiMap.get(Long.valueOf(conceptId));
             ptr.append(paui);
             if (root == null) {
               root = concept2.getName();
@@ -1565,7 +1570,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           for (final String descriptorId : FieldedStringTokenizer
               .split(treepos.getAncestorPath(), "~")) {
             final Descriptor descriptor2 =
-                getDescriptor(new Long(descriptorId));
+                getDescriptor(Long.valueOf(descriptorId));
             if (descriptor2 == null) {
               throw new Exception(
                   "descriptor from ptr is null " + descriptorId);
@@ -1573,7 +1578,7 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
             if (paui != null) {
               ptr.append(".");
             }
-            paui = this.descriptorAuiMap.get(descriptorId);
+            paui = descriptorAuiMap.get(Long.valueOf(descriptorId));
             ptr.append(paui);
             if (root == null) {
               root = descriptor2.getName();
@@ -1618,14 +1623,14 @@ public class WriteRrfContentFilesAlgorithm extends AbstractAlgorithm {
           String root = null;
           for (final String codeId : FieldedStringTokenizer
               .split(treepos.getAncestorPath(), "~")) {
-            final Code code2 = getCode(new Long(codeId));
+            final Code code2 = getCode(Long.valueOf(codeId));
             if (code2 == null) {
               throw new Exception("code from ptr is null " + codeId);
             }
             if (paui != null) {
               ptr.append(".");
             }
-            paui = this.codeAuiMap.get(codeId);
+            paui = codeAuiMap.get(Long.valueOf(codeId));
             ptr.append(paui);
             if (root == null) {
               root = code2.getName();
